deploy/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-deployment
spec:
    replicas: 2
    selector:
        matchLabels:
            component: api
    template:
        metadata:
            labels:
                component: api
        spec:
            containers:
                -   name: api
                    image: api:latest
                    imagePullPolicy: IfNotPresent
                    ports:
                        -   containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
    name: api-service
spec:
    type: ClusterIP
    selector:
        component: api
    ports:
         -   port: 8000
             targetPort: 8000
